--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="dark_gray">#F1F1F1</color>
+    <color name="background_gray">#FDFDFD</color>
+    <color name="light_gray">#E7E7E7</color>
+    <color name="header_gray">#232323</color>
+    <color name="paragraph_gray">#4A4A4A</color>
+    <color name="translation_gray">#636363</color>
+    <color name="light_blue">#0052B4</color>
+    <color name="dark_blue">#08082C</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
