--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -51,9 +51,67 @@
             android:padding="14dp"
             android:inputType="text"
             android:paddingStart="25dp"
+            android:paddingEnd="25dp"
+            android:textSize="16sp"
+            android:maxLines="1"
             android:layout_marginTop="25dp"
             android:layout_marginStart="@dimen/app_padding"
             android:layout_marginEnd="@dimen/app_padding" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="@dimen/app_padding"
+            android:layout_marginEnd="@dimen/app_padding">
+
+            <View
+                android:id="@+id/dot"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:background="@drawable/circle"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/headerText"
+                app:layout_constraintBottom_toBottomOf="@+id/headerText"/>
+
+            <TextView
+                android:id="@+id/headerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toRightOf="@id/dot"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@color/header_gray"
+                android:padding="10dp"
+                android:textStyle="bold"
+                android:text="@string/previous_words"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
+                android:background="@drawable/s_search_button"
+                app:layout_constraintTop_toBottomOf="@+id/headerText"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:alpha="0.8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/no_history_banner_pl"
+                    android:adjustViewBounds="true"
+                    android:padding="40dp"/>
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
