--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,158 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="0dp"
-    android:layout_margin="0dp"
-    tools:context=".searchfragment.SearchFragment">
+<layout>
 
-    <LinearLayout
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="historyDisponible"
+            type="boolean" />
+    </data>
+
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:padding="0dp"
+        android:layout_margin="0dp"
+        tools:context=".searchfragment.SearchFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <ImageView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="225dp"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:src="@drawable/banner_no_stars"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/bannerStarsOne"
-                android:layout_width="match_parent"
-                android:layout_height="225dp"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_stars_one"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/bannerStarsTwo"
-                android:layout_width="match_parent"
-                android:layout_height="225dp"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_stars_two"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/bannerStarsThree"
-                android:layout_width="match_parent"
-                android:layout_height="225dp"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_stars_three"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/bannerStarsFour"
-                android:layout_width="match_parent"
-                android:layout_height="225dp"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_stars_four"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:background="@drawable/s_search_rectangle"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <fragment
-            android:id="@+id/currentLanguageFragment"
-            android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/search"
-            android:imeOptions="actionSearch"
-            android:background="@drawable/s_search_button"
-            android:padding="14dp"
-            android:inputType="text"
-            android:paddingStart="25dp"
-            android:paddingEnd="25dp"
-            android:textSize="16sp"
-            android:maxLines="1"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="@dimen/app_padding"
-            android:layout_marginEnd="@dimen/app_padding" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="@dimen/app_padding"
-            android:layout_marginEnd="@dimen/app_padding">
-
-            <View
-                android:id="@+id/dot"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:background="@drawable/circle"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/headerText"
-                app:layout_constraintBottom_toBottomOf="@+id/headerText"/>
-
-            <TextView
-                android:id="@+id/headerText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toRightOf="@id/dot"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textColor="@color/header_gray"
-                android:padding="10dp"
-                android:textStyle="bold"
-                android:text="@string/previous_words"/>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:paddingTop="7dp"
-                android:paddingBottom="7dp"
-                android:background="@drawable/s_search_button"
-                app:layout_constraintTop_toBottomOf="@+id/headerText"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:alpha="0.8"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/no_history_banner_pl"
+                    android:layout_height="225dp"
+                    android:scaleType="centerCrop"
                     android:adjustViewBounds="true"
-                    android:padding="40dp"/>
+                    android:src="@drawable/banner_no_stars"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/bannerStarsOne"
+                    android:layout_width="match_parent"
+                    android:layout_height="225dp"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_stars_one"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/bannerStarsTwo"
+                    android:layout_width="match_parent"
+                    android:layout_height="225dp"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_stars_two"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/bannerStarsThree"
+                    android:layout_width="match_parent"
+                    android:layout_height="225dp"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_stars_three"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.core.widget.NestedScrollView>
+                <ImageView
+                    android:id="@+id/bannerStarsFour"
+                    android:layout_width="match_parent"
+                    android:layout_height="225dp"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_stars_four"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:background="@drawable/s_search_rectangle"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <fragment
+                android:id="@+id/currentLanguageFragment"
+                android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/search"
+                android:imeOptions="actionSearch"
+                android:background="@drawable/s_search_button"
+                android:padding="14dp"
+                android:inputType="text"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:textSize="16sp"
+                android:maxLines="1"
+                android:layout_marginTop="25dp"
+                android:layout_marginStart="@dimen/app_padding"
+                android:layout_marginEnd="@dimen/app_padding" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="@dimen/app_padding"
+                android:layout_marginEnd="@dimen/app_padding">
+
+                <View
+                    android:id="@+id/dot"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:background="@drawable/circle"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/headerText"
+                    app:layout_constraintBottom_toBottomOf="@+id/headerText"/>
+
+                <TextView
+                    android:id="@+id/headerText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintLeft_toRightOf="@id/dot"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textColor="@color/header_gray"
+                    android:padding="10dp"
+                    android:textStyle="bold"
+                    android:text="@string/previous_words"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/s_search_button"
+                    app:layout_constraintTop_toBottomOf="@+id/headerText"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/historyRecycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="@{historyDisponible ? View.VISIBLE : View.GONE}"/>
+
+                    <ImageView
+                        android:alpha="0.8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/no_history_banner_pl"
+                        android:adjustViewBounds="true"
+                        android:visibility="@{historyDisponible ? View.GONE : View.VISIBLE}"
+                        android:padding="40dp"/>
+
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</layout>
