Now app saves history, added db and Last Search dao

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -92,6 +92,7 @@
                 android:layout_marginTop="6dp"/>
 
             <EditText
+                android:id="@+id/searchWordInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/search"
