--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent"
         android:padding="0dp"
         android:layout_margin="0dp"
+        android:background="?attr/colorSecondary"
         tools:context=".searchfragment.SearchFragment">
 
         <LinearLayout
