--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -149,6 +149,7 @@
                         android:id="@+id/historyRecycler"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layoutAnimation="@anim/layout_fall_down"
                         android:visibility="@{historyDisponible ? View.VISIBLE : View.GONE}"/>
 
                     <ImageView
