--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
         android:padding="0dp"
         android:layout_margin="0dp"
         android:background="?attr/colorSecondary"
-        tools:context=".searchfragment.SearchFragment">
+        tools:context=".home.HomeFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
