--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -8,13 +8,17 @@
         <variable
             name="position"
             type="int" />
+        <variable
+            name="interactor"
+            type="com.whycody.wordslife.home.HistoryInteractor" />
     </data>
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{()->interactor.onHistoryItemClick(historyItem)}">
 
         <View
             android:id="@+id/underline"
@@ -77,7 +81,8 @@
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="match_parent"
-                android:src='@{historyItem.saved ? @drawable/ic_star_filled : @drawable/ic_star_stroke, default=@drawable/ic_star_stroke}'
+                android:onClick="@{()->interactor.onStarClick(historyItem)}"
+                android:src='@{historyItem.saved ? @drawable/ic_star_filled : @drawable/ic_star_stroke}'
                 android:padding="6dp"/>
 
         </LinearLayout>
