--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,46 +7,53 @@
             type="java.lang.String" />
     </data>
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".search.SearchFragment"
-        android:orientation="vertical"
         android:background="?attr/colorSecondary"
-        android:paddingTop="40dp">
+        tools:context=".search.SearchFragment">
 
-        <fragment
-            android:id="@+id/currentLanguageFragment"
-            android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingTop="40dp">
 
-        <EditText
-            android:id="@+id/searchWordInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/search"
-            android:imeOptions="actionSearch"
-            android:background="@drawable/s_search_button"
-            android:padding="14dp"
-            android:inputType="text"
-            android:paddingStart="25dp"
-            android:paddingEnd="25dp"
-            android:textSize="16sp"
-            android:maxLines="1"
-            android:text="@{searchWord}"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="@dimen/app_padding"
-            android:layout_marginEnd="@dimen/app_padding" />
+            <fragment
+                android:id="@+id/currentLanguageFragment"
+                android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/searchResultRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="21dp"/>
+            <EditText
+                android:id="@+id/searchWordInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/search"
+                android:imeOptions="actionSearch"
+                android:background="@drawable/s_search_button"
+                android:padding="14dp"
+                android:inputType="text"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:textSize="16sp"
+                android:maxLines="1"
+                android:text="@{searchWord}"
+                android:layout_marginTop="25dp"
+                android:layout_marginStart="@dimen/app_padding"
+                android:layout_marginEnd="@dimen/app_padding" />
 
-    </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/searchResultRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="21dp"
+                android:layoutAnimation="@anim/layout_fall_down"/>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </layout>
