--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="colorAccent">@color/light_blue</item>
         <item name="colorPrimaryDark">@color/header_gray</item>
+        <item name="colorOnSurface">@color/paragraph_gray</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">@color/light_gray</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
