--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -52,21 +52,31 @@
                 android:layout_marginStart="@dimen/app_padding"
                 android:layout_marginEnd="@dimen/app_padding" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="?attr/colorPrimaryVariant"
-                android:background="@drawable/s_header_backgr"
-                android:padding="10dp"
+                android:layout_marginTop="32dp"
                 android:visibility="@{resultsAvailable ? View.VISIBLE : View.GONE}"
-                android:layout_marginTop="26dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="@dimen/app_padding"
                 android:paddingStart="@dimen/app_padding"
                 android:paddingEnd="@dimen/app_padding"
-                android:textSize="15sp"
-                android:text="@{@string/word_search_results(searchWord)}"/>
+                android:paddingBottom="8dp">
+
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="8dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/circle"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:textColor="?attr/colorPrimaryVariant"
+                    android:textSize="16sp"
+                    android:text="@{@string/word_search_results(searchWord)}"/>
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
