--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View"/>
         <variable
-            name="searchWord"
-            type="java.lang.String" />
-        <variable
-            name="searchInteractor"
-            type="com.whycody.wordslife.search.SearchInteractor" />
-        <variable
-            name="resultsAvailable"
-            type="boolean" />
+            name="searchViewModel"
+            type="com.whycody.wordslife.search.SearchViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -47,16 +41,17 @@
                 android:paddingEnd="25dp"
                 android:textSize="16sp"
                 android:maxLines="1"
-                android:text="@{searchWord}"
+                android:text="@{searchViewModel.searchWord}"
                 android:layout_marginTop="25dp"
                 android:layout_marginStart="@dimen/app_padding"
                 android:layout_marginEnd="@dimen/app_padding" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:visibility="@{resultsAvailable ? View.VISIBLE : View.GONE}"
+                android:onClick="@{()->searchViewModel.mainResultsHeaderClicked()}"
+                android:visibility="@{searchViewModel.resultsAvailable ? View.VISIBLE : View.GONE}"
                 android:paddingStart="@dimen/app_padding"
                 android:paddingEnd="@dimen/app_padding"
                 android:paddingBottom="8dp">
@@ -68,42 +63,51 @@
                     android:src="@drawable/circle"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:textStyle="bold"
+                    android:layout_gravity="center"
                     android:layout_marginStart="10dp"
                     android:textColor="?attr/colorPrimaryVariant"
                     android:textSize="16sp"
-                    android:text="@{@string/word_search_results(searchWord)}"/>
+                    android:text="@{@string/word_search_results(searchViewModel.searchWord)}"/>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:rotation="@{!searchViewModel.resultsHidden ? 0 : 180}"
+                    android:src="@drawable/ic_arrow_down"/>
 
             </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="@{resultsAvailable ? View.GONE : View.VISIBLE}"
+                android:visibility="@{searchViewModel.resultsAvailable ? View.GONE : View.VISIBLE}"
                 android:padding="@dimen/app_padding"
                 android:layout_marginTop="50dp"
                 android:textSize="15sp"
                 android:gravity="center"
-                android:text="@{@string/no_word_search_results(searchWord)}"/>
+                android:text="@{@string/no_word_search_results(searchViewModel.searchWord)}"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/searchResultRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="@{resultsAvailable ? View.VISIBLE : View.GONE}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:visibility="@{searchViewModel.resultsAvailable &amp;&amp; !searchViewModel.resultsHidden ? View.VISIBLE : View.GONE}"
                 android:overScrollMode="never"
                 android:layoutAnimation="@anim/layout_fall_down"/>
 
             <TextView
-                android:id="@+id/showMoreResults"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/show_more_results"
                 android:padding="@dimen/app_padding"
-                android:onClick="@{()->searchInteractor.showMoreResults()}"
-                android:visibility="invisible"
+                android:onClick="@{()->searchViewModel.showMoreResultsClicked()}"
+                android:visibility="@{searchViewModel.thereAreMoreResults &amp;&amp; !searchViewModel.resultsHidden ? View.VISIBLE : View.GONE}"
                 android:textColor="?attr/colorPrimary"
                 android:gravity="center"/>
 
