--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
-        <import type="android.view.View"/>
         <variable
-            name="searchViewModel"
-            type="com.whycody.wordslife.search.SearchViewModel" />
+            name="searchWord"
+            type="java.lang.String" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -17,10 +16,12 @@
         tools:context=".search.SearchFragment">
 
         <LinearLayout
+            android:id="@+id/searchContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingTop="40dp">
+            android:paddingTop="40dp"
+            android:paddingBottom="30dp">
 
             <fragment
                 android:id="@+id/currentLanguageFragment"
@@ -41,75 +42,11 @@
                 android:paddingEnd="25dp"
                 android:textSize="16sp"
                 android:maxLines="1"
-                android:text="@{searchViewModel.searchWord}"
+                android:text="@{searchWord}"
+                android:layout_marginBottom="17dp"
                 android:layout_marginTop="25dp"
                 android:layout_marginStart="@dimen/app_padding"
                 android:layout_marginEnd="@dimen/app_padding" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:onClick="@{()->searchViewModel.mainResultsHeaderClicked()}"
-                android:visibility="@{searchViewModel.resultsAvailable ? View.VISIBLE : View.GONE}"
-                android:paddingStart="@dimen/app_padding"
-                android:paddingEnd="@dimen/app_padding"
-                android:paddingBottom="8dp">
-
-                <ImageView
-                    android:layout_width="8dp"
-                    android:layout_height="8dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/circle"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textStyle="bold"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:textColor="?attr/colorPrimaryVariant"
-                    android:textSize="16sp"
-                    android:text="@{@string/word_search_results(searchViewModel.searchWord)}"/>
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:rotation="@{!searchViewModel.resultsHidden ? 0 : 180}"
-                    android:src="@drawable/ic_arrow_down"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="@{searchViewModel.resultsAvailable ? View.GONE : View.VISIBLE}"
-                android:padding="@dimen/app_padding"
-                android:layout_marginTop="50dp"
-                android:textSize="15sp"
-                android:gravity="center"
-                android:text="@{@string/no_word_search_results(searchViewModel.searchWord)}"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/searchResultRecycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:visibility="@{searchViewModel.resultsAvailable &amp;&amp; !searchViewModel.resultsHidden ? View.VISIBLE : View.GONE}"
-                android:overScrollMode="never"
-                android:layoutAnimation="@anim/layout_fall_down"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/show_more_results"
-                android:padding="@dimen/app_padding"
-                android:onClick="@{()->searchViewModel.showMoreResultsClicked()}"
-                android:visibility="@{searchViewModel.thereAreMoreResults &amp;&amp; !searchViewModel.resultsHidden ? View.VISIBLE : View.GONE}"
-                android:textColor="?attr/colorPrimary"
-                android:gravity="center"/>
 
         </LinearLayout>
 
