Fixed bug with searching empty word, fixed scrolling search results

--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -86,6 +86,7 @@
                 android:id="@+id/searchResultRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:visibility="@{searchViewModel.resultsAvailable &amp;&amp; !searchViewModel.resultsHidden ? View.VISIBLE : View.GONE}"
                 android:overScrollMode="never"
