--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View"/>
@@ -12,75 +12,99 @@
         <variable
             name="translation"
             type="java.lang.String" />
+        <variable
+            name="viewModel"
+            type="com.whycody.wordslife.search.result.SearchResultViewModel" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/underline"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?attr/colorPrimarySurface"
-            android:visibility="@{position==0 ? View.INVISIBLE : View.VISIBLE}"/>
+        android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/mainLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/app_padding">
+            android:orientation="vertical"
+            android:alpha="@{viewModel.resultsHidden ? 0.8f : 1f}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <View
+                android:id="@+id/underline"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorPrimarySurface"
+                android:visibility="@{position==0 ? View.INVISIBLE : View.VISIBLE}"/>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{mainText}"
-                    android:textSize="15sp"
-                    android:alpha="0.9"
-                    android:textColor="?attr/colorPrimaryDark"/>
+                android:padding="@dimen/app_padding">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="3dp">
-
-                    <View
-                        android:id="@+id/dot"
-                        android:layout_width="12dp"
-                        android:layout_height="10dp"
-                        android:background="@drawable/ic_light_arrowright"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="8dp"/>
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingStart="@dimen/app_padding"
-                        android:textSize="14sp"
-                        android:text="@{translation}"/>
+                        android:text="@{mainText}"
+                        android:textSize="15sp"
+                        android:alpha="0.9"
+                        android:textColor="?attr/colorPrimaryDark"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="3dp">
+
+                        <View
+                            android:id="@+id/dot"
+                            android:layout_width="12dp"
+                            android:layout_height="10dp"
+                            android:background="@drawable/ic_light_arrowright"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="8dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingStart="@dimen/app_padding"
+                            android:textSize="14sp"
+                            android:text="@{translation}"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
-            </LinearLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="46dp"
+                    android:src="@drawable/ic_information"
+                    android:layout_gravity="center"
+                    android:padding="10dp"
+                    android:paddingStart="@dimen/app_padding" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="46dp"
-                android:src="@drawable/ic_information"
-                android:layout_gravity="center"
-                android:padding="10dp"
-                android:paddingStart="@dimen/app_padding" />
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/gradientImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/s_search_alpha"
+            android:visibility="@{viewModel.resultsHidden ? View.VISIBLE : View.GONE}"
+            app:layout_constraintTop_toTopOf="@id/mainLayout"
+            app:layout_constraintBottom_toBottomOf="@id/mainLayout"
+            app:layout_constraintRight_toRightOf="@id/mainLayout"
+            app:layout_constraintLeft_toLeftOf="@id/mainLayout"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
