--- a/app/src/main/res/layout/fragment_search_field.xml
+++ b/app/src/main/res/layout/fragment_search_field.xml
@@ -45,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_clear"
+            android:visibility="invisible"
             android:alpha="0.6"
             android:paddingEnd="16dp"
             android:paddingStart="4dp"
