--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -11,11 +10,6 @@
             type="com.whycody.wordslife.search.result.SearchResultViewModel" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".search.SearchFragment">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +18,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:onClick="@{()->searchViewModel.mainResultsHeaderClicked()}"
                 android:visibility="@{searchViewModel.resultsAvailable ? View.VISIBLE : View.GONE}"
                 android:paddingStart="@dimen/app_padding"
@@ -61,9 +55,7 @@
 
             </LinearLayout>
 
-<!--                            android:visibility="@{(!searchViewModel.resultsAvailable &amp;&amp; searchViewModel.typeOfLyrics == SearchResultFragment.MAIN_LYRICS) ? View.VISIBLE : View.GONE}"-->
-<!--            android:text="@{@string/no_word_search_results(searchViewModel.searchWord)}"-->
-            <LinearLayout
+           <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -76,6 +68,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/app_padding"
+                    android:layout_marginBottom="@dimen/app_padding"
                     android:scaleType="fitStart"
                     android:src="@drawable/gr_cloud_astronaut"/>
 
@@ -130,19 +123,6 @@
                 android:overScrollMode="never"
                 android:layoutAnimation="@anim/layout_fall_down"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/show_more_results"
-                android:padding="@dimen/app_padding"
-                android:clickable="@{!searchViewModel.searching}"
-                android:onClick="@{()->searchViewModel.showMoreResultsClicked()}"
-                android:visibility="@{searchViewModel.thereAreMoreResults &amp;&amp; !searchViewModel.resultsHidden &amp;&amp; !searchViewModel.searching &amp;&amp; searchViewModel.resultsAvailable ? View.VISIBLE : View.GONE}"
-                android:textColor="?attr/colorPrimary"
-                android:gravity="center"/>
-
         </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
 
 </layout>
